Fixes the bread curmb alignment issue.

--- a/app/view/main/Nav.scss
+++ b/app/view/main/Nav.scss
@@ -111,7 +111,7 @@ $content-edge: 6pt;
 }
 
 .main-nav-user-button {
-    
+    height:100%;
     .x-icon-el {
         width:32pt;
         height:32pt;
